--- a/2023.04.10 - AdamFreeman.AspNetCore6.Chapter14 - Using Dependency Injection.md
+++ b/2023.04.10 - AdamFreeman.AspNetCore6.Chapter14 - Using Dependency Injection.md
@@ -6,17 +6,18 @@
 > > > 
 > > > Using Dependency Injection
 
-Content
-=======
-
-
 -------------------------
 Getting into the context
 =========================
-> ###### `Keywords`: Service, Dependency, Injection, Middleware, Endpoint, Reflection
+> ###### `Keywords`: Service, Locator, Register, Dependency, Injection, Middleware, Endpoint, Reflection
 
-> `Service`
-> - shared set of code for consuption in any place.
+> `Service` - shared set of code for consuption in any place.
+> `Locator` - a special service which located the `Service`s.
+> `Register` - a way to introduce a service for a `Locator`.
+> `Dependency` - one object consumes another.
+> `Injection` - fulfilling the needs of `Dependency`.
+> `Middleware` - a component which observes the request pipeline.
+> `Endpoint` - a final Component (Terminal) which responds to specific URL.
 
 -------------------------------------------
 Understanding the Service Location Problem
@@ -24,7 +25,7 @@ Understanding the Service Location Problem
 
 Most projects needs services, to share a code across the project.
 
-But how to access the same object across the project? The Service Locators is responsible for location of these service-objects.
+But how to access the same object across the project? The `Service Locators` is responsible for location of these service-objects.
 
 There are many ways to make services locatable, but the main ones are:
 
@@ -43,9 +44,9 @@ There are many ways to make services locatable, but the main ones are:
 
 > `The singleton pattern` is simple to understand and easy to use, but the knowledge of how services are located is spread across the app.
 
------------------------------
+-------------------------------------------
 Understanding the Tightly Coupled Components Problem
------------------------------
+-------------------------------------------
 
 In case of simple `Singleton` implementation - the references to the object are made throught the static field of concrete `class`.
 
@@ -70,15 +71,23 @@ app.MapGet("foo", async (ctx) =>
 });
 ```
 
-
 ----------------------------
 Using Dependency Injection
 ============================
 
-The DI is a step forward to a more flexible and testable app, which utilizes both the Injection and Singleton approaches:
+The DI is a step forward to a more flexible and testable app, which utilizes both `Injection` and `Singleton` approaches.
+
+> `Register`
+> 
+> The `Dependency` is registed via the `IServiceCollection` of `WebApplicationBuilder.Service` property:
 
 ```csharp
 builder.Services.AddSingleton<IResponseFormatter, HtmlResponseFormatter>(); 
+```
+
+The `Dependency` is injected into a function via arg:
+
+```csharp
 
 app.MapGet("hi", 
   async (
@@ -89,11 +98,10 @@ app.MapGet("hi",
   });
 ```
 
-The Middleware approach makes the dependency hidden entirely:
+Or into the the `Middleware` via ctor:
 
-```charp
-
-app.UseMiddleware<WeatcherMiddleware>();
+```csharp
+app.UseMiddleware<WeatherMiddleware>();
 
 class WeatherMiddleware 
 {
@@ -117,14 +125,9 @@ class WeatherMiddleware
 }
 ```
 
-> `IServiceCollection`
-> > The registry of services.
-> > 
-> > Available in `WebApplicationBuilder.Services` property.
-
----
+---------------------------------
 Consuming a Service in Endpoint
----
+---------------------------------
 
 The `WeatherEndpoint` renders a more complicated case, since it's an entirely `static class`, so the `Dependency` cant be injected directly.
 
@@ -133,9 +136,9 @@ The `WeatherEndpoint` renders a more complicated case, since it's an entirely `s
 > - Using an Adapter Function.
 > - Using the Activation Utility class.
 
----
-Getting Services from HttpContext.
----
+---------------------------------
+Getting Services from HttpContext
+---------------------------------
 
 The `HttpContext.RequestServices` property will do:
 
@@ -160,11 +163,11 @@ The `HttpContext.RequestServices` implements the interface:
 > The drawback:
 > > service is resolved per dependency (every time).
 
----
-Using an Adapter Function.
----
+---------------------------------
+Using an Adapter Function
+---------------------------------
 
-As mentioned above, the request via HttpContext, injects a new dependency instance every request. 
+As mentioned above, the request via `HttpContext`, injects a new dependency instance every request. 
 
 A more elegant approach is to get service when the `Endpoint` is created:
 
@@ -182,7 +185,6 @@ public class WeatherEndpoint
 ```
 
 ```csharp
-
 public static class EndpointEx
 {
     public static void MapWeather(
@@ -202,13 +204,13 @@ public static class EndpointEx
 app.MapWeather("endpoint/class");
 ```
 
----
+---------------------------------
 Using the Activation Utility class.
----
+---------------------------------
 
 For endpoints that require services, it can often be easier to use an `object`, rather than a `static method`.
 
-The injection goes kinda automatically, via the `Reflection`
+The injection goes kinda automatically, via the `Reflection`.
 
 ```csharp
 public class WeatherEndpoint
@@ -237,7 +239,6 @@ public static class EndpointExtensions{
         string methodName = "Endpoint")
     {
         var methodInfo = typeof(T).GetMethod(methodName);
-
         if (methodInfo == null || methodInfo.ReturnType != typeof(Task))
         {
             throw new System.Exception("Method cannot be used");
@@ -247,14 +248,13 @@ public static class EndpointExtensions{
         // Activator helps to locate services. Good job!
         T endpointInstance = ActivatorUtilities.CreateInstance<T>(app.ServiceProvider);
 
-        // invoke a method
+        // sets up the Endpoint.
         app.MapGet(
             path,
             (RequestDelegate)
             methodInfo.CreateDelegate(
                 typeof(RequestDelegate),
                 endpointInstance));
-
     }
 }
 ```
@@ -270,3 +270,6 @@ public static class EndpointExtensions{
 > - `GetServiceOrCreateInstance<T>(services, args)`: locates an instance, or creates if not found.
 > - `GetServiceOrCreateInstance(services, type, args)`: locates an instance, or creates if not 
 found.
+
+-------------
+```<<EOF>> ```
