--- a/2023.04.10 - AdamFreeman.AspNetCore6.Chapter14 - Using Dependency Injection.md
+++ b/2023.04.10 - AdamFreeman.AspNetCore6.Chapter14 - Using Dependency Injection.md
@@ -11,13 +11,13 @@ Getting into the context
 =========================
 > ###### `Keywords`: Service, Locator, Register, Dependency, Injection, Middleware, Endpoint, Reflection
 
-> `Service` - shared set of code for consuption in any place.
-> `Locator` - a special service which located the `Service`s.
-> `Register` - a way to introduce a service for a `Locator`.
-> `Dependency` - one object consumes another.
-> `Injection` - fulfilling the needs of `Dependency`.
-> `Middleware` - a component which observes the request pipeline.
-> `Endpoint` - a final Component (Terminal) which responds to specific URL.
+- `Service` - shared set of code for consuption in any place.
+- `Locator` - a special service which located the `Service`s.
+- `Register` - a way to introduce a service for a `Locator`.
+- `Dependency` - one object consumes another.
+- `Injection` - fulfilling the needs of `Dependency`.
+- `Middleware` - a component which observes the request pipeline.
+- `Endpoint` - the Component which responds to specific URL directly.
 
 -------------------------------------------
 Understanding the Service Location Problem
@@ -88,7 +88,6 @@ builder.Services.AddSingleton<IResponseFormatter, HtmlResponseFormatter>();
 The `Dependency` is injected into a function via arg:
 
 ```csharp
-
 app.MapGet("hi", 
   async (
     HttpContext context, 
@@ -98,7 +97,7 @@ app.MapGet("hi",
   });
 ```
 
-Or into the the `Middleware` via ctor:
+Or into the `Middleware` via ctor:
 
 ```csharp
 app.UseMiddleware<WeatherMiddleware>();
@@ -179,6 +178,7 @@ public class WeatherEndpoint
         HttpContext context, 
         IResponseFormatter formatter)
     {
+        // no need to call the Singleton from here. Yay!
         await formatter.Format(context, "Hi.");
     }
 }
@@ -191,6 +191,7 @@ public static class EndpointEx
         this IEndpointRouteBuilder app, 
         string path)
     {
+        // resolve during the registration.
         IResponseFormatter formatter =
             app.ServiceProvider.GetRequiredService<IResponseFormatter>();
 
@@ -210,7 +211,7 @@ Using the Activation Utility class.
 
 For endpoints that require services, it can often be easier to use an `object`, rather than a `static method`.
 
-The injection goes kinda automatically, via the `Reflection`.
+The injection is performed via `Activation Utility` class which uses the `IServiceCollection` from `HttpContext`.
 
 ```csharp
 public class WeatherEndpoint
@@ -232,14 +233,16 @@ public class WeatherEndpoint
 ```csharp
 using System.Reflection;
 
-public static class EndpointExtensions{
+public static class EndpointExtensions
+{
     public static void MapEndpoint<T>(
         this IEndpointRouteBuilder app,
         string path,
         string methodName = "Endpoint")
     {
+        // get the verified endpoint method:
         var methodInfo = typeof(T).GetMethod(methodName);
-        if (methodInfo == null || methodInfo.ReturnType != typeof(Task))
+        if (methodInfo?.ReturnType != typeof(Task))
         {
             throw new System.Exception("Method cannot be used");
         }
