--- a/2023.04.11 - AdamFreeman.AspNetCore6.Chapter14 - Using Dependency Injection - Service Lifecycle.md
+++ b/2023.04.11 - AdamFreeman.AspNetCore6.Chapter14 - Using Dependency Injection - Service Lifecycle.md
@@ -139,6 +139,7 @@ static class EndpointExtensions
 
 > Local Heroes:
 > > `ActivatorUtilities.CreateInstance`
+> >
 > > `app.ServiceProvider`
 
 -----------------------------
@@ -174,8 +175,6 @@ class WeatherDelegate {
 }
 ```
 
-Since `IResponseFormatter` service was created with the AddTransient method before, each dependency is resolved with a different object.
-
 > `TIP`:
 > You can create custom scopes with `IServiceProvider.CreateScope`.
 
@@ -191,17 +190,30 @@ Avoid the Scoped Service Validation Pitfall
 -------------------------------
 
 - The `Service` consumers aren't aware of a lifecycle of the object.
-- The `Scoped` services can be used only withit their `Scope`.
-- Requesting a Scoped service outside the Scope causes an exception.
-
+- The `Scoped` services can be used only within their `Scope`.
+- A new `Scope` is created per each incoming HTTP request.
+- Requesting a `Scoped` service outside the `Scope` causes an exception:
 
 > An unhandled exception occured while processing the request.
-> > InvalidOprationException: Cannot resolve scoped service `Plarform.Services.IResponseFormatter` from root provider.
+> > InvalidOprationException: Cannot resolve scoped service `Platform.Services.IResponseFormatter` from root provider.
 > > ##### Microsoft.Extensions.DependencyInjection.ServiceLookup.CallSiteValidator.ValidateResolution(Type serviceType, IServiceScope scope, IServiceScope rootScope)
 
 The extension method that configures the endpoint resolves services through an `IServiceProvider` object obtained from the routing middleware:
+```csharp
+app.MapGet(path, context => 
+    (Task)
+    methodInfo.Invoke(
+        endpointInstance,
+        methodParams.Select(p => 
+            p.ParameterType == typeof(HttpContext) 
+                ? context
+                : app.ServiceProvider.GetService(p.ParameterType) // obeys the Scope?
+        )
+    )
+);
+```
 
-``` app.ServiceProvider.GetService(p.ParameterType) ```
+> app.ServiceProvider.GetService(p.ParameterType)
 
 -------------------------
 Accessing Scoped Services Through the Context Object
@@ -211,13 +223,12 @@ The `IServiceProvider` grants access to `Scoped` services, as well as `Singleton
 
 It fits well with the most common use of scoped services, which is to use a single service object for each HTTP request:
 
-``` HttpContext.RequestServices```
+> HttpContext.RequestServices
+>
+> context.RequestServices.GetService(p.ParameterType)
 
-```csharp
-context.RequestServices.GetService(p.ParameterType)
-```
-
-Only dependencies that are declared by the method that handles the request are resolved using the `HttpContext.RequestServices` property. Services that are declared by an endpoint class ctor are still resolved using the `IEndpointRouteBuilder.ServiceProvider` property, which ensures that endpoints **don't use scoped services inappropriately**.
+Only dependencies that are declared by the method that handles the request are resolved using the `HttpContext.RequestServices` property. 
+Services that are declared by an endpoint class ctor are still resolved using the `IEndpointRouteBuilder.ServiceProvider` property, which ensures that endpoints **don't use scoped services inappropriately**.
 
 --------------------------------------------------
 Creating New Handlers for Each Request
@@ -234,16 +245,12 @@ static class EndpointExtensions
         string path, 
         string methodName = "Endpoint")
     {
-        // get the method.
+        // get the correct method.
         var methodInfo = type(T).GetMethod(methodName);
-
-        // checn the signature.
-        if (methodInfo == null || methodInfo.ReturnType != typeof(Task))
+        if (methodInfo?.ReturnType != typeof(Task))
         {
             throw new System.Exception("Method cannot be used");
         }
-
-        
 
         // call the Endpoint method of the instance.
         var methodParams = methodInfo!.GetParameters();
@@ -253,19 +260,18 @@ static class EndpointExtensions
             // per every request.
             T endpointInstance = ActivatorUtilities.CreateInstance<T>(context.RequestServices);   
 
-            var result = (Task)
-            (methodInfo.Invoke(
-                endpointInstance!,
-                methodParams.Select(p =>
-                    p.ParameterType switch
-                    {
-                        HttpContext context => context,
-                        // resolve here:
-                        _ => context.RequestServices.GetService(p.ParameterType)
-                    }).ToArray()
-            ))!
-
-            return result;
+            return
+                (Task)
+                (methodInfo.Invoke(
+                    endpointInstance!,
+                    methodParams.Select(p =>
+                        p.ParameterType switch
+                        {
+                            HttpContext context => context,
+                            // resolve here:
+                            _ => context.RequestServices.GetService(p.ParameterType)
+                        }).ToArray()
+                ))!;
         });
             
     }
@@ -404,8 +410,8 @@ builder.Services.AddScoped<IResponseFormatter>(serviceProvider =>
     return
     (IResponseFormatter)
     ActivatorUtilities.CreateInstance
-      (serviceProvider,
-      implementationType);
+        (serviceProvider,
+        implementationType);
 });
 
 builder.Services.AddScoped<ITimeStamper, DefaultTimeStamper>();
@@ -443,7 +449,9 @@ app.MapGet("single", async context =>
 
 app.MapGet("/", async context => 
 {
-    IResponseFormatter formatter = context.RequestServices.GetServices<IResponseFormatter>().First(f => f.RichOutput);
+    var formatter = context.RequestServices
+        .GetServices<IResponseFormatter>()
+        .First(f => f.RichOutput);
 
     await formatter.Format(context, "Multiple services");
 });
@@ -453,7 +461,7 @@ app.MapGet("/", async context =>
 The `Service` is resolved by latest registered implementation `(GuidService)` in this case:
 ```csharp
 context.RequestServices
-.GetRequiredServices<IResponseFormatter>();
+    .GetRequiredServices<IResponseFormatter>();
 ```
 
 The other consumer knows about multiple implementations via:
