ASP.NET Platform Features

--- a/2023.04.17 - AdamFreeman.AspNetCore.Chapter14 - DI - Glossary.md
+++ b/2023.04.17 - AdamFreeman.AspNetCore.Chapter14 - DI - Glossary.md
@@ -13,7 +13,7 @@
 `Dependency Injection` - the process of `Injecting` the object.
 
 `Service` - shared set of code for consuption in any place.
-`Locator` - a special service which located the `Service`s.
+`Locator` - a special service which locates the `Service`s.
 `Register` - a way to introduce a service for a `Locator`.
 
 `Middleware` - a component which observes the request pipeline.
