fixed md for ASP.NET basics

--- a/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
+++ b/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
@@ -41,11 +41,11 @@ The ASP.NET handles the injection of real instance of the `Service`. In many way
 Program.cs structure
 ==================
 
-`CreateBuilder`   - Makes a basic setup for a server. Raises the ASP-system services, configs.
-`Build`           - Sets up the application services, and builds the `App`.
-`MapGet`          - Sets up an `Endpoint` for the `App`.
-`Run`             - Tells the server to start listening.
-`UseXXX`          - Sets up a `Middleware` for the `App`.
+- `CreateBuilder`   - Makes a basic setup for a server. Raises the ASP-system services, configs.
+- `Build`           - Sets up the application services, and builds the `App`.
+- `MapGet`          - Sets up an `Endpoint` for the `App`.
+- `Run`             - Tells the server to start listening.
+- `UseXXX`          - Sets up a `Middleware` for the `App`.
 
 Endpoint vs Middleware
 ----------------------
