fixed ASP.NET Basics

--- a/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
+++ b/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
@@ -57,10 +57,17 @@ So `Middleware`s more like bodyguards face-controlling every request, while `End
 
 Frameworks
 ==============
-MVC - Good ol' pattern "which describes the shape of app". It's getting deprecated after mid-10s, when the SPA risen. Still good for a large solutions, because of separation of concerns.
-RazorPages - An approach where all stuff for a page is in one place. Requires less boilerplate code, stands better for little chunks of pages or maybe SPA subpages.
-Blazor - a framework which allows to make a client side with a C# code.
-  BlazorServer - executes client requests on server side.
-  BlazorWebAssembly - runs code on the client.
+- `MVC` - Good ol' pattern "which describes the shape of app". It's getting deprecated after mid-10s, when the SPA risen. Still good for a large solutions, because of separation of concerns.
+- `RazorPages` - An approach where all stuff for a page is in one place. Requires less boilerplate code, stands better for little chunks of pages or maybe SPA subpages.
+- `Blazor` - a framework which allows to make a client side with a C# code.
+  - `BlazorServer` - executes client requests on server side.
+  - `BlazorWebAssembly` - runs code on the client.
+
+
+Utilities
+============
+The `EntityFramework` and the `Identity` are a beyond current scope.
+
+Basically, the first one is all about data, and the second is about security.
 
 ---
