Request Pipeline and Routing Middleware

--- a/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
+++ b/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
@@ -30,7 +30,9 @@ The Platform features contains:
 9. gRPC
 10. SignalR
 
-The essentials are:
+Platform Essentials
+--------------------
+
 The `HttpServer` is a mechanism for HTTP I/O built in ASP.NET. Like low-level netcode. It's just wrapping up low level details of HTTP into a nice object and bypasses it onti the Middleware chain (aka RequestPipeline).
 The `RequestPipeline` consists of `Middlewares` which are processing incoming request, and then generating the response.
 Worth menti0ning that `RequestPipeline` is a highly customizable part of the ASP.NET.
@@ -39,7 +41,7 @@ The ASP.NET handles the injection of real instance of the `Service`. In many way
 
 
 Program.cs structure
-==================
+----------------------
 
 - `CreateBuilder`   - Makes a basic setup for a server. Raises the ASP-system services, configs.
 - `Build`           - Sets up the application services, and builds the `App`.
@@ -71,3 +73,42 @@ The `EntityFramework` and the `Identity` are a beyond current scope.
 Basically, the first one is all about data, and the second is about security.
 
 ---
+
+Request Pipeline
+====================
+
+So, one of the Platform's essentials is the Middleware and the request pipeline which is basically a chain of middlewares.
+Every Middleware has three logical parts:
+1. Process request
+2. Bypass next
+3. Process response
+
+Every Middleware should call step 2 via calling the `next()` delegate,
+otherwise the chain will be interrupted (cirquited).
+
+So, if there is no `next` calls, it means the its the final Middleware in RequestPipeline, the Terminal.
+
+Worth mentioning, that there are two kinds of forms of Middlewares - class and lambda.
+
+Middleware Options - DI
+------------------------
+
+Fun thing happens when need to pass a config to a Middleware (which's lifecycle is controlled by the platform, mostly).
+When the server is just building, call smth like `builder.AddOptions`, bypass the data-object, which will be available for middlewares via injection:
+`MyMiddleware(next, IOption<SomeOption> option);`
+
+Routing
+====================
+
+The routing is the way to organize the RequestPipeline via Terminal targeting.
+Basically, the Terminal with URL binding is an Endpoint.
+The Routing Middleware could be injected onto the request pipeline in order to manage the Pipeline flow like automatically.
+
+
+// Urgh, feels lazy, dont wanna write in depth and not really recall the details.
+// I just dont wanna go in-depth, but I dont have a general picture either.
+// Will see later. Tired.
+NEXT:
+Pipeline
+----------------
+
