Update 2023.07 - ASP.NET PART II Notes.md

--- a/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
+++ b/dotnet/ASP.NET/2023.07 - ASP.NET PART II Notes.md
@@ -8,6 +8,8 @@ It has three major parts, like:
 2. Utility Frameworks: EntityFramework, Identity.
 3. Platform features: Middlewares, DI, Cache, and many others.
 
+So, basically,
+> The `ASP.NET Core` is a web-development platform with frameworks around and some utilities.
 
 Platform features
 =====================
