--- a/dotnet/History - DotNetCore/6.md
+++ b/dotnet/History - DotNetCore/6.md
@@ -16,57 +16,57 @@ In addition to this unification, the .NET 6 ecosystem offers:
 
 ---
 
-> FileStream Performance: rewritten for better perf and reliability on Windows. Never blocks when created for async IO on Win.
+- FileStream Performance: rewritten for better perf and reliability on Windows. Never blocks when created for async IO on Win.
 
-> Profile-guided optimization: a step-forward from the `TieredCompilation`. See details [here](https://devblogs.microsoft.com/dotnet/performance-improvements-in-net-6/#jit)
+- Profile-guided optimization: a step-forward from the `TieredCompilation`. See details [here](https://devblogs.microsoft.com/dotnet/performance-improvements-in-net-6/#jit)
 
-> Crossgen2: rewritten on C#, able to make analysis and opt impossible before.
+- Crossgen2: rewritten on C#, able to make analysis and opt impossible before.
 
-> Arm64 support
+- Arm64 support
 
-> Hot reload allows to see app's changes without restart. More details [here](https://devblogs.microsoft.com/dotnet/update-on-net-hot-reload-progress-and-visual-studio-2022-highlights/)
+- Hot reload allows to see app's changes without restart. More details [here](https://devblogs.microsoft.com/dotnet/update-on-net-hot-reload-progress-and-visual-studio-2022-highlights/)
 
-> .NET Multi-platform App IO (.NET MAUI): still preview, allows to build native client app from shared codebase.
+- .NET Multi-platform App IO (.NET MAUI): still preview, allows to build native client app from shared codebase.
 
-> C#10
+- C#10
 
-> `dotnet workload`: optinal SDK workloads.
+- `dotnet workload`: optinal SDK workloads.
 
-> JSON: much improve
+- JSON: much improve
 
-> HTTP/3: allows to establish connections more quickly via the `QUIC` connection protocol, and allows mobile clients to roam between Wi-Fi. Details [here](https://learn.microsoft.com/en-us/dotnet/core/extensions/httpclient-http3)
+- HTTP/3: allows to establish connections more quickly via the `QUIC` connection protocol, and allows mobile clients to roam between Wi-Fi. Details [here](https://learn.microsoft.com/en-us/dotnet/core/extensions/httpclient-http3)
 
-> ASP.NET Core:
-- MinimalAPI,
-- ahead-of-time (AOT) for Blazor WebASM and SPA.
-- Also, Blazor components can now be rendered from JS and integraded with existing Javascript-based apps.
-- See details [here](https://learn.microsoft.com/en-us/aspnet/core/release-notes/aspnetcore-6.0)
+- ASP.NET Core:
+  - MinimalAPI,
+  - ahead-of-time (AOT) for Blazor WebASM and SPA.
+  - Also, Blazor components can now be rendered from JS and integraded with existing Javascript-based apps.
+  - See details [here](https://learn.microsoft.com/en-us/aspnet/core/release-notes/aspnetcore-6.0)
 
-> `OpenTelemetry`: collection of tools, APIs and SDKs that help you analyze app's performance and behaviour.
+- `OpenTelemetry`: collection of tools, APIs and SDKs that help you analyze app's performance and behaviour.
 
-> `Security`.
+- `Security`.
 
-> `IL trimming`: now the unused types and members are trimmed too.
+- `IL trimming`: now the unused types and members are trimmed too.
 
-> `New Code Analysers` in .NET 6 SDK. Details [here](https://github.com/dotnet/roslyn-analyzers/blob/main/src/NetAnalyzers/Core/AnalyzerReleases.Shipped.md#release-60)
+- `New Code Analysers` in .NET 6 SDK. Details [here](https://github.com/dotnet/roslyn-analyzers/blob/main/src/NetAnalyzers/Core/AnalyzerReleases.Shipped.md#release-60)
 
-> `Custom platform guards`: OperatingSystem.IsWindows();
+- `Custom platform guards`: OperatingSystem.IsWindows();
 
-> `OS-specific TFM`
+- `OS-specific TFM`
 
-> `Generic Math`
+- `Generic Math`
 
-> `Nuget package validator`
+- `Nuget package validator`
 
-> `Reflection API`: NullabilityInfo.
+- `Reflection API`: NullabilityInfo.
 
-> `Microsoft.Extensions API`
+- `Microsoft.Extensions API`
 
-> `New LINQ API`: Cool stuff in `Enumerable` class. Like `Chunk` or `TryGetNonEnumeratedCount`.
+- `New LINQ API`: Cool stuff in `Enumerable` class. Like `Chunk` or `TryGetNonEnumeratedCount`.
 
-> `Date, time, timezone`: DateOnly, TimeOnly. More details [here](https://devblogs.microsoft.com/dotnet/date-time-and-time-zone-enhancements-in-net-6/).
+- `Date, time, timezone`: DateOnly, TimeOnly. More details [here](https://devblogs.microsoft.com/dotnet/date-time-and-time-zone-enhancements-in-net-6/).
 
-> `PriorityQueue` class. Finally.
+- `PriorityQueue` class. Finally.
 
 
 # Conclusion
@@ -78,3 +78,7 @@ The performance has been improved even further.
 New tools.
 New technologies.
 Better productivity.
+
+refs:
+- (https://devblogs.microsoft.com/dotnet/announcing-net-6/)
+- (https://learn.microsoft.com/en-us/dotnet/core/whats-new/dotnet-6)
